--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -411,6 +411,10 @@
     .event-content__second {
         float: left;
         width: rem(220px);
+
+        .join-choose-tier & {
+            width: auto;
+        }
     }
 
     .action {
