add JS hooks to classnames for a/b test

--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -25,7 +25,7 @@
                     @fragments.benefits.priceInfo(Benefits.details(Tier.Patron))
                     <div class="join-today__teaser">
                         <a class="action" href="/join/patron/enter-details">
-                            <span class="action__text">Become a Patron today</span>
+                            <span class="action__text js-opt-become-member">Become a Patron today</span>
                         </a>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="home-slice__offset-copy">
                     <p class="home-slice__copy">In return for your support, Patrons are given a behind-the-scenes view of how the Guardian operates.  For example, tour our newsroom, visit our printing presses or attend a campaign lecture.</p>
-                    <a class="action home-slice__action" href="/join/patron/enter-details">Become a Patron today</a>
+                    <a class="action home-slice__action js-opt-become-member" href="/join/patron/enter-details">Become a Patron today</a>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
                     @fragments.benefits.priceInfo(Benefits.details(Tier.Patron))
                     <div class="join-today__teaser">
                         <a class="action" href="/join/patron/enter-details">
-                            <span class="action__text">Become a Patron today</span>
+                            <span class="action__text js-opt-become-member">Become a Patron today</span>
                         </a>
                     </div>
                 </div>
