--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -37,14 +37,14 @@
                 <a class="package__select-toggle mobile-only js-benefit-header" href="#"></a>
             </div>
         </div>
-        
+
         <div class="package__outer hidden-mobile js-select-tier">
             <div class="package__inner">
                 @fragments.tier.details(currentTier=tier, showBenefitDetails=showBenefitDetails, showBenefitCopy=showBenefitCopy)
             </div>
             <div class="package__item package__item-cta@if(mode == "promo" && showLearnMore) { package__item--promo}">
                 @if(mode == "promo") {
-                    <a class="action action-cta" href="/join/@tier.toString.toLowerCase/enter-details">Become a @tier</a>
+                    <a class="action action-cta js-opt-become-member" href="/join/@tier.toString.toLowerCase/enter-details">Become a @tier</a>
                     @if(showLearnMore) {
                         @if(tier == Tier.Patron) {
                             <a class="action action--secondary-button" href="/patrons">Learn more about @{tier}s</a>
