--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -16,7 +16,7 @@
     } else {
         <a class="action js-ticket-cta" href="/event/@event.id/buy" itemprop="url">Buy tickets</a>
     }
-    <div class="terms-info">By proceeding, you agree to the<br /> Guardian Live events
+    <div class="terms-info js-legal-terms">By proceeding, you agree to the<br /> Guardian Live events
         <a href="@Config.guardianLiveEventsTermsUrl" target="_blank">Terms and Conditions</a>
     </div>
 }
