created the fieldset--slim class

--- a/frontend/app/views/fragments/form/feedback.scala.html
+++ b/frontend/app/views/fragments/form/feedback.scala.html
@@ -1,4 +1,4 @@
-<fieldset class="fieldset">
+<fieldset class="fieldset fieldset--slim">
 
     <div class="fieldset__heading">
         <h2 class="form__heading">Tell us what you think</h2>
@@ -36,7 +36,7 @@
 
 </fieldset>
 
-<fieldset class="fieldset">
+<fieldset class="fieldset fieldset--slim">
 
     <div class="fieldset__heading">
         <h2 class="form__heading">About you</h2>
