adding in qa- hooks

--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -52,7 +52,7 @@
 
             <div class="package__item package__item-cta@if(mode == "promo" && showLearnMore) { package__item--promo}">
                 @if(mode == "promo") {
-                    <a class="action js-opt-become-member" href="/join/@tier.toString.toLowerCase/enter-details">Become a @tier</a>
+                    <a class="action js-opt-become-member" href="/join/@tier.toString.toLowerCase/enter-details" id="qa-@tier.toString.toLowerCase">Become a @tier</a>
                     @if(showLearnMore) {
                         @if(tier == Tier.Patron) {
                             <a class="action action--secondary-button" href="/patrons">Learn more about @{tier}s</a>
