Revert "Safari sentry form parse error"

--- a/frontend/app/views/fragments/form/passwordDetail.scala.html
+++ b/frontend/app/views/fragments/form/passwordDetail.scala.html
@@ -22,7 +22,7 @@
                    maxlength="20"
                    data-error-message="Please enter a password"
                    data-validation="length"
-                   data-arguments="6,20"/>
+                   data-arguments="[6, 20]"/>
         </div>
 
     </div>
