Give test users the UAT touchpoint backend

--- a/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
@@ -46,7 +46,7 @@
         css: {
             loaded: false
         },
-        stripePublicKey: '@Config.touchpointBackendConfig.stripe.publicKey',
+        stripePublicKey: '@Config.touchpointDefaultBackend.stripe.publicKey',
         membership: {
             buildNumber: '@app.BuildInfo.buildNumber',
             eventImages: {
