--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -13,7 +13,9 @@
 /* ==========================================================================
    Membership pages
    ========================================================================== */
-@import 'pages/events';
+@import 'pages/events-detail';
+@import 'pages/events-summary';
+@import 'pages/events-list';
 @import 'pages/joiner';
 @import 'pages/tier';
 @import 'pages/tickets';
