--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -29,8 +29,8 @@
                 </li>
                 <li class="benefits__list--items">
                     <i class="icon-sprite icon-sprite__left icon-sprite-large-digital_digest"></i>
-                    <span class="benefits__list--header">Digital Digest email</span>
-                    <p>Receive weekly updates on the upcoming programme</p>
+                    <span class="benefits__list--header">Membership email updates</span>
+                    <p>Receive regular updates on the upcoming programme</p>
                 </li>
                 <li class="benefits__list--items">
                     <i class="icon-sprite icon-sprite__left icon-sprite-large-video_highlights"></i>
