Change the Stripe token used by Test Users [#MEM-447]
This should allow Test Users to join as Partners and Patrons.

https://jira.gutools.co.uk/browse/MEM-447

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -39,7 +39,7 @@
         <meta name="twitter:card" content="summary"/>
 
         <title>@(Config.siteTitle + " - " + title)</title>
-        @fragments.javaScriptFirstSteps()
+        @fragments.javaScriptFirstSteps(pageInfo)
 
         <link rel="stylesheet" media="all" href="@Asset.at("stylesheets/style.css")">
 
