--- a/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
@@ -1,3 +1,4 @@
+@(pageInfo: model.PageInfo)
 @import configuration.Config
 @import views.support.Asset
 
@@ -46,7 +47,9 @@
         css: {
             loaded: false
         },
-        stripePublicKey: '@Config.touchpointDefaultBackend.stripe.publicKey',
+        @for(stripePublicKey <- pageInfo.stripePublicKey) {
+            stripePublicKey: '@stripePublicKey',
+        }
         membership: {
             buildNumber: '@app.BuildInfo.buildNumber',
             eventImages: {
