--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -59,7 +59,7 @@
 
 // only visible when no filter results are found
 .events-list--empty:before {
-    content: "No matching events – please try a different search.";
+    content: 'No matching events – please try a different search.';
     margin: 0 0 2rem;
     display: block;
 }
