--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -283,6 +283,7 @@
             @include flex(1, 0, percentage(gs-span(8)/gs-span(12)));
             .no-flexbox & {
                 width: 60%;
+                font-size: 0;
                 display: inline-block;
             }
         }
@@ -294,6 +295,7 @@
             @include flex();
             .no-flexbox & {
                 width: 40%;
+                font-size: 0;
                 .event-item__cta {
                     position: static;
                 }
@@ -316,6 +318,12 @@
 
         .event-item__description {
             display: block;
+        }
+    }
+
+    .event-item__container {
+        .no-flexbox & {
+            font-size: 0;
         }
     }
 }
