--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -39,7 +39,7 @@
         <meta name="twitter:card" content="summary"/>
 
         <title>@(Config.siteTitle + " - " + title)</title>
-        @fragments.javaScriptFirstSteps(pageInfo)
+        @fragments.javaScriptFirstSteps()
 
         <link rel="stylesheet" media="all" href="@Asset.at("stylesheets/style.css")">
 
