--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -12,9 +12,9 @@
 
 @ticketCta = {
     @if(event.isSoldOut) {
-        <button class="action action--disabled js-ticket-cta" disabled="disabled">Sold Out</button>
+        <div class="action action--sold-out">Sold Out</div>
     } else {
-        <a class="action js-ticket-cta" href="/event/@event.id/buy" itemprop="url">Buy tickets</a>
+        <a class="action action--buy js-ticket-cta" href="/event/@event.id/buy" itemprop="url">Buy tickets</a>
         <div class="terms-info js-legal-terms">By proceeding, you agree to the<br /> Guardian Live events
             <a href="@Config.guardianLiveEventsTermsUrl" target="_blank">Terms and Conditions</a>
         </div>
