--- a/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
@@ -52,6 +52,11 @@
             eventImages: {
                 widths: [@Config.eventImageWidths.mkString(",")],
                 ratios: [@Config.eventImageRatios.mkString(",")]
+            },
+            homeImages: {
+                widths: [@Config.homeImageWidths.mkString(",")],
+                promoWidths: [@Config.homeImagePromoWidths.mkString(",")],
+                ratios: [@Config.homeImageRatios.mkString(",")]
             }
         },
         googleAnalytics: {
