--- a/frontend/assets/stylesheets/home/_home.scss
+++ b/frontend/assets/stylesheets/home/_home.scss
@@ -51,7 +51,7 @@
     background-color: $white;
 
     @include mq(tablet) {
-        padding-left: rem(20px)
+        padding-left: rem(20px);
     }
 }
 
