--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -10,11 +10,11 @@
 @import com.gu.membership.salesforce.Tier
 @import configuration.Config
 
-@ticketCta = {
+@ticketCta(actionClassSoldOut: String, actionClassBuy:String) = {
     @if(event.isSoldOut) {
-        <span class="action action--sold-out">Sold out</span>
+        <span class="action @actionClassSoldOut">Sold out</span>
     } else {
-        <a class="action action--buy js-ticket-cta" href="/event/@event.id/buy" itemprop="url">Buy tickets</a>
+        <a class="action @actionClassBuy js-ticket-cta" href="/event/@event.id/buy" itemprop="url">Buy tickets</a>
         <div class="terms-info js-legal-terms">By proceeding, you agree to the<br /> Guardian Live events
             <a href="@Config.guardianLiveEventsTermsUrl" target="_blank">Terms and Conditions</a>
         </div>
@@ -100,7 +100,7 @@
                                 }
                             }
                         </div>
-                        @ticketCta
+                        @ticketCta("action--sold-out-event-ticket-details", "action--buy-event-ticket-details")
                     </div>
                 }
             }
@@ -178,7 +178,7 @@
                                     </div>
                                 }
                             }
-                            @ticketCta
+                            @ticketCta("action--sold-out-event-content-sidebar", "action--buy-event-content-sidebar")
                             @becomeMemberCta(ticket)
                         }
                     }
