--- a/frontend/app/views/home.scala.html
+++ b/frontend/app/views/home.scala.html
@@ -31,10 +31,10 @@
             @slideShowElement("nao_klein_", "Blurb of text here image two...", new DateTime(2014, 1, 12, 0, 0), "two")
             @slideShowElement("man_aud_", "Blurb of text here image one...", new DateTime(2014, 1, 12, 0, 0), "one", true)
         </div>
-        <div class="home-hero-blurb u-cf">
-                <p>We believe real, face-to-face discussion has a unique power to broaden minds. </p>
-                <p><strong>We’re bringing the Guardian to life.</strong></p>
-            <a class="action" href="/join">Join today</a>
+        <div class="home-hero-description">
+                <p class="no-margin">We believe real, face-to-face discussion has a unique power to broaden minds. </p>
+                <p><strong class="home-hero-description-highlight">We’re bringing the Guardian to life.</strong></p>
+            <a class="action action--no-bottom-margin" href="/join">Join today</a>
         </div>
     </section>
 
