--- a/frontend/assets/stylesheets/base/_type.scss
+++ b/frontend/assets/stylesheets/base/_type.scss
@@ -42,6 +42,10 @@ p {
     margin-bottom: rem(($gs-baseline / 3) * 2);
 }
 
+.no-margin {
+    margin: 0;
+}
+
 h3 {
     font-weight: normal;
     margin-bottom: rem(7px);
