made name more semantic and changed color

--- a/frontend/app/views/home.scala.html
+++ b/frontend/app/views/home.scala.html
@@ -16,7 +16,7 @@
         <a href="@anchorHref">
             <div class="delayed-home-promo-image-load" data-src="@Asset.at("images/home/promo/" + imgSrc + "{width}{pixel_ratio}.jpg")" data-alt="@description" data-class="responsive-img"></div>
             <p class="home-promo__description">@description</p>
-            <i class="black-arrow-round-cta"></i>
+            <i class="secondary-arrow-round-cta"></i>
         </a>
     </li>
 }
