added noIndex capability

--- a/frontend/app/views/home.scala.html
+++ b/frontend/app/views/home.scala.html
@@ -21,7 +21,7 @@
     </li>
 }
 
-@main("Home Page a-b", containerPadding=false) {
+@main("Home Page a-b", containerPadding=false, noIndex=true) {
     <section class="u-cf">
         <div class="slide-show">
             @slideShowElement("viv_west_", "Blurb of text here image six...", new DateTime(2014, 1, 12, 0, 0), "six")
